force-app/main/default/objects/Builder_PO_Line__c/Builder_PO_Line__c.object-meta.xml
<CustomObject>
    <label>Builder PO Line</label>
    <nameField>
        <displayFormat>POL-{000000}</displayFormat>
        <label>Builder PO Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Builder PO Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>