force-app/main/default/objects/Builder_PO_Line__c/fields/Builder_PO__c.field-meta.xml
<CustomField>
    <fullName>Builder_PO__c</fullName>
    <label>Builder PO</label>
    <referenceTo>Builder_PO__c</referenceTo>
    <relationshipLabel>Builder PO Lines</relationshipLabel>
    <relationshipName>Builder_PO_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>