force-app/main/default/objects/Builder_PO_Line__c/fields/Line_Result__c.field-meta.xml
<CustomField>
    <fullName>Line_Result__c</fullName>
    <formula>IF(OR(ABS(Price_Variance_Pct__c) &gt; 2, ABS(Qty_Variance_Pct__c) &gt; 5), &quot;Mismatch&quot;, IF(OR(Price_Variance_Pct__c &lt;&gt; 0, Qty_Variance_Pct__c &lt;&gt; 0), &quot;Variance&quot;, &quot;Match&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Result</label>
    <type>Text</type>
</CustomField>