force-app/main/default/objects/Builder_PO_Line__c/fields/Package_Qty__c.field-meta.xml
<CustomField>
    <fullName>Package_Qty__c</fullName>
    <label>Package Qty</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>