force-app/main/default/objects/Builder_PO_Line__c/fields/Price_Book_Price__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Price__c</fullName>
    <label>Price Book Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>