force-app/main/default/objects/Builder_PO_Line__c/fields/Qty_Variance_Pct__c.field-meta.xml
<CustomField>
    <fullName>Qty_Variance_Pct__c</fullName>
    <formula>IF(BLANKVALUE(Package_Qty__c, 0) = 0, 0, ((BLANKVALUE(Quantity_Ordered__c, 0) - Package_Qty__c) / Package_Qty__c) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty Variance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>