force-app/main/default/objects/Builder_PO_Line__c/fields/Quantity_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Ordered__c</fullName>
    <label>Qty Ordered</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>