force-app/main/default/objects/Builder_PO_Line__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sf</fullName>
                <default>true</default>
                <label>sf</label>
            </value>
            <value>
                <fullName>ea</fullName>
            </value>
            <value>
                <fullName>cy</fullName>
            </value>
            <value>
                <fullName>hr</fullName>
            </value>
            <value>
                <fullName>lot</fullName>
            </value>
            <value>
                <fullName>linear ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>